--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-status-monitor": "^1.3.3",
     "mongoose": "^5.10.14",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "uuid": "^8.3.1"
   }
 }
